--- a/stils.css
+++ b/stils.css
@@ -1,26 +1,100 @@
-body {
-  background-color:#c1ff96;
+html, body {
+      height:100%;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      background-color:#c1ff96;
+      font-family: "Times New Roman", Times, serif;
+      }
+
+    .topnav {
+      overflow: hidden;
+      background-color: yellow;
+      margin-top: 0px;
+      margin-left: 200px;
+      display: flex;
+      justify-content: space-around;
+      position: fixed;
+      top: 0;
+     }
+
+      .topnav a {
+      flex: 1;
+      display: flex;
+      justify-content: space-around;
+      color: blue;
+      text-decoration: none;
+     }
+
+      .sidebar a {
+      padding: 10px;
+      text-decoration: none;
+      font-size: 18px;
+      color: black;
+      display: block;
+      border: 1px;
+      border-style: dotted;
+      border-color: red;
+      } 
+
+    .topnav a: hover {
+     background-color:red;
+     color:black;
+    }
+
+    .sidebar {
+    height:100%;
+    width: 200px;
+    position: fixed;
+    background-color: green;
+    top: 0;
+    left: 0;
+    }
+
+    .sidebar a: hover {
+    background-color: red;
+    color: gold;
+    }
+  main {
+    margin-left: 300px;
+    margin-right: 100px;
+    background-color: green;
+    margin-top: 30px;
 }
-p {
-  text-align: center;
-  color: black;
-  font-size:30px;
+
+  p {
+    text-align: center;
+    color: black;
+    font-size:30px;
+    }
+
+  h1{
+    text-align: center;
+    color: black;
+    font-size:50px;
+    }
+
+  table{
+    background-color:#f60303;
+    color:black;
+    margin-left:auto;
+    margin-right:auto;
+    border:1px solid;
+    }
+
+  th{
+     background-color:#f7fe1a;
+    }
+
+  td{
+    background-color:#6fc100 ;
+    }
+#tabula{
+  background-color:orange; 
 }
-h1{
-  text-align: center;
-  color: black;
-  font-size:50px;
+#saturs{
+  background-color:yellow; 
 }
-table{
-  background-color:#f60303;
-  color:black;
-  margin-left:auto;
-  margin-right:auto;
-  border:1px solid;
-}
-th{
-   background-color:#f7fe1a;
-}
-td{
-  background-color:#6fc100 ;
+#canva{
+  background-color:blue; 
 }
