--- a/stils.css
+++ b/stils.css
@@ -20,7 +20,13 @@ html, body {
       
       }
 
-
+.myDiv {
+      position: center;
+}
+.container{
+      position: center;
+      text-align: center;
+}
 
 .sidebar a {
       padding: 10px;
@@ -61,11 +67,16 @@ html, body {
   main {
     margin-left: 300px;
     margin-right: 100px;
-    background-color: green;
+    background-color: blue;
     margin-top: 30px;
     margin-bottom: 25px;
     padding-bottom: 25px;
+ 
     }
+   div.a {
+    text-align: center;
+    }
+
   footer {
     background-color: red;
     margin-left: 200px;
